feat: api to trigger scheduled tasks fix: pagination on history
